Updated security layer